# py-oxyroot

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/oxyroot/: __init__.py  __init__.pyi
python/py_oxyroot/: __init__.py
python/tests/: convert_to_pq.py  read_ntuples.py  test_all.py  test_read_from_uproot.py
src/: lib.rs
