[package]
name = "py-oxyroot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxyroot"
crate-type = ["cdylib"]

[dependencies]
oxyroot = "0.1.25"
pyo3 = { version = "0.26.0", features = ["abi3-py38"] }
parking_lot = "0.12.3"
numpy = "0.26.0"
