[package]
name = "py-oxyroot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxyroot"
crate-type = ["cdylib"]

[dependencies]
oxyroot = "0.1.25"
pyo3 = { version = "0.25.0", features = ["abi3-py38"] }
parking_lot = "0.12.3"
numpy = "0.25.0"
parquet = { version = "53.0.0", features = ["arrow"] }
arrow = "53.0.0"
polars = "0.50.0"
pyo3-polars = "0.23.1"
rayon = "1.10.0"
glob = "0.3.1"
once_cell = "1.19.0"
num_cpus = "1.16.0"
polars-core = "0.50.0"
